[package]
name = "builder-api-extend-module"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = "0.12.0"
tokio = { version = "1.41.1", features = ["full"]}
axum = { version = "0.7", features = ["macros"] }
axum-server = "0.7"

ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", rev = "cf3c404" }

alloy = { version = "0.2.0", features = ["full", "provider-trace-api", "rpc-types-beacon", "rpc-types-engine"] }

serde_json = "1.0.115"
serde = {version = "1.0.215", features = ["derive"]}

eyre = "0.6.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "2.0.3"
futures = "0.3.31"

env-file-reader = "0.3.0"
